# AdventOfCode

./: pyproject.toml  requirements.txt
2022/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb
2024/: dec1.ipynb  dec2.ipynb  dec3.ipynb  dec4.ipynb  dec5.ipynb  dec6.ipynb
2025/: dec1.ipynb  dec2.ipynb  dec3.ipynb  dec4.ipynb  dec5.ipynb
