[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Synnøve Krog <161812534+SynnoveKrog@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^7.1.0"
advent-of-code-data = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
